--- a/MatricuFastWeb.csproj
+++ b/MatricuFastWeb.csproj
@@ -235,6 +235,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Prueba\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
