Creación de Clases

--- a/MatricuFastWeb.csproj
+++ b/MatricuFastWeb.csproj
@@ -209,6 +209,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Model\Matricula.cs" />
+    <Compile Include="Model\Estudiantes.cs" />
+    <Compile Include="Model\Cursos.cs" />
     <Compile Include="Model\Usuario.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Site.Master.cs">
